<resources>
    <string name="app_name">RCMOApp</string>

    <string name="user_hint">บัญชีผู้ใช้งาน</string>
    <string name="pass_hint">รหัสผ่าน</string>
    <string name="login">ลงชื่อเข้าใช้งาน</string>
    <string name="forget_password">ลืมรหัสผ่าน</string>
    <string name="register">สมัครใช้งาน</string>
    <string name="login_button">เข้าสู่ระบบ</string>


    <string name="register_new">ลงทะเบียน</string>
    <string name="register_name_hint">ชื่อ</string>
    <string name="register_surname_hint">นามสกุล</string>
    <string name="register_username_hint">ชื่อบัญชี</string>
    <string name="register_email_hint">อีเมลล์</string>
    <string name="register_pass_hint">รหัสผ่าน</string>
    <string name="register_Confirm_pass_hint">ยืนยันรหัสผ่าน</string>


    <string name="province">จังหวัด</string>
    <string name="amphor">อำเภอ</string>
    <string name="tumbon">ตำบล</string>

    <string name="rice_button">ข้าว/พืชไร่</string>
    <string name="jasmine_rice_button">ข้าวหอมมะลิ</string>
    <string name="plant_group">กลุ่มพืช</string>

    <string name="livestock_button">กรุณาเลือกสินค้า</string>
    <string name="livestock_group">กลุ่มปศุสัตว์</string>
    <string name="livestock_unit">จำนวนที่เลียง</string>
    <string name="livestock_unit_label">ตัว</string>


    <string name="fishing_button_label">เลือกสินค้า</string>
    <string name="fishing_group">กลุ่มประมง</string>
    <string name="fishing_fish_pond_type_label">ลักษณะการเลียง</string>
    <string name="fishing_fish_pond_size_label">ขนาดบ่อเลียง</string>
    <string name="fishing_fish_pond_label">บ่อ</string>
    <string name="fishing_kra_chang_label">กระชัง</string>

    <string name="land_detail">ข้อมูลที่ดิน</string>
    <string name="land_size">ขนาดแปลงที่ดิน</string>
    <string name="land">ไร่</string>


    <string name="edit_text_hint"><font size="10">My hint string</font></string>

    <string name="appbar_product_name_label">สินค้า</string>
    <string name="appbar_cancel_label">cancel</string>

    <string name="select_province_label">เลือกจังหวัด</string>
    <string name="select_amphoe_label">เลือกอำเภอ</string>
    <string name="select_tumbon_label">เลือกตำบล</string>

    <string name="search_province_hint">ค้นหาจังหวัด</string>
    <string name="search_amphoe_hint">ค้นหาอำเภอ</string>
    <string name="search_tumbon_hint">ค้นหาตำบล</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!-- standard Layout -->

    <string name="interest_rate">อัตราดอกเบี้ยร้อยละ/ปี</string>
    <string name="depreciation_equipment">ค่าเสื่อมอุปกรณ์</string>
    <string name="opportunity_cost">ค่าเสียโอกาสอุปกรณ์</string>
    <string name="standard_cost">ต้นทุนมาตรฐานของ สศก.</string>

    <string name="plant_area">พื้นที่เพาะปลูก</string>

    <string name="baht">บาท</string>
    <string name="baht_sq_mts">บาท/ไร่</string>

    <string name="calculate_again">คำนวนใหม่</string>
    <string name="default_value">ค่าเริ่มต้น</string>

    <!-- cost Layout  -->
    <string name="land_label">ที่ดิน</string>
    <string name="cost">ค่าใช้จ่าย</string>
    <string name="land_cost">ค่าเตรียมที่ดิน</string>
    <string name="plant_cost">ค่าปลูก+เตรียมพันธุ์</string>
    <string name="maintenance_cost">ค่าดูแลรักษา</string>
    <string name="harvest_cost">ค่าเก็บเกี่ยว</string>
    <string name="labor_cost">ค่าแรงงาน</string>

    <!-- other cost Layout -->
    <string name="other_cost">ค่าใช้จ่ายอื่นๆ</string>
    <string name="seed_cost">ค่าพันธุ์</string>
    <string name="fertilizer_cost">ค่าปุ๋ย</string>
    <string name="weedkiller_cost">ค่ายาปราบศัตรูพืชและวัชพืช</string>
    <string name="other_material_cost">ค่าวัสดุอื่นๆ น้ำมันเชื้อเพลิง และค่าซ่อมแซมอุปกรณ์</string>

    <!-- other cost Layout -->
    <string name="opportunity_investment_cost">เสียโอกาสเงินลงทุน</string>


    <!--New -->

    <string name="register_text_btn"><u>สมัครใช้งาน</u></string>
    <string name="forgot_pass_text_btn"><u>ลืมรหัสผ่าน</u></string>

    <string name="change_pass_text_btn"><u>เปลียนรหัสผ่าน</u></string>
    <string name="logout_text_btn"><u>ออกจากระบบ</u></string>

</resources>
