<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/plantLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:textAppearance="@style/RCMOHeaderFont"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/RCMOHeaderFont.Green"
            android:text="@string/plant_group"
            android:id="@+id/textView"
            android:textAlignment="gravity"
            android:paddingTop="10dp"
            android:paddingBottom="5dp" />

        <Button
            android:drawableLeft="@drawable/plant_icon"
            android:drawableRight="@drawable/navigate_right_icon"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:text="@string/rice_button"
            android:id="@+id/plant_rice_button"
            android:maxWidth="300dp"
            android:textAlignment="textStart"
            style="@style/RCMOButton"
            android:onClick="actionToMainProductListActivity" />

        <Button
            android:drawableLeft="@drawable/plant_icon"
            android:drawableRight="@drawable/navigate_right_icon"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:text="@string/jasmine_rice_button"
            android:id="@+id/plant_jasmine_button"
            android:maxWidth="300dp"
            android:textAlignment="textStart"
            style="@style/RCMOButton"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/RCMOHeaderFont.Green"
            android:text="@string/land_detail"
            android:id="@+id/plant_land_detail_label"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textAlignment="gravity"
            android:paddingTop="30dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/RCMODetailFont.Gray"
            android:text="@string/land_size"
            android:id="@+id/plant_land_size_text"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/plant_land_size_editText"
                android:layout_weight="1"
                android:text="17"
                android:layout_marginRight="5dp"
                style="@style/RCMOInputText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="@style/RCMOSubHeaderFont.Green"
                android:text="@string/land"
                android:id="@+id/plant_land_unit_label"
                android:gravity="center_vertical" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/RCMODetailFont.Gray"
            android:text="@string/province"
            android:id="@+id/plant_province_label"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:id="@+id/plant_province_spinner"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textDirection="firstStrong"
            android:background="@drawable/grey_text_view"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/RCMODetailFont.Gray"
                    android:text="@string/amphor"
                    android:id="@+id/plant_aumphor_label"
                    android:layout_marginTop="10dp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:id="@+id/plant_aumpor_spinner"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/grey_text_view" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/RCMODetailFont.Gray"
                    android:text="@string/tumbon"
                    android:id="@+id/plant_tumbon_label"
                    android:layout_marginTop="10sp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="38sp"
                    android:id="@+id/plant_tumbon_spriner"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/grey_text_view" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
