<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fishingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    android:textAppearance="@style/RCMOHeaderFont"
    android:paddingBottom="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/RCMOHeaderFont.Green"
        android:text="@string/fishing_group"
        android:id="@+id/fishing_group"
        android:textAlignment="gravity"
        android:paddingTop="10dp"
        android:paddingBottom="5dp" />

    <Button
        android:drawableLeft="@drawable/fish_icon"
        android:drawableRight="@drawable/navigate_right_icon"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:text="@string/fishing_button_label"
        android:id="@+id/fishing_button"
        android:maxWidth="300dp"
        android:textAlignment="textStart"
        style="@style/RCMOButton"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/RCMOHeaderFont.Green"
        android:text="@string/land_detail"
        android:id="@+id/fishing_land_detail_label"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textAlignment="gravity"
        android:paddingTop="30dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/RCMODetailFont.Gray"
        android:text="@string/fishing_fish_pond_type_label"
        android:id="@+id/fishing_fish_pond_type_label"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">


        <Button
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:text="@string/fishing_fish_pond_label"
            android:id="@+id/fishing_bo_button"
            android:textAlignment="center"
            style="@style/RCMOButton.selected"
            android:layout_weight="1" />

        <Button
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:text="@string/fishing_kra_chang_label"
            android:id="@+id/fishing_krachang_button"
            android:textAlignment="center"
            android:layout_weight="1"
            style="@style/RCMOButton.unselected"/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/RCMODetailFont.Gray"
        android:text="@string/fishing_fish_pond_size_label"
        android:id="@+id/fishing_land_size_text"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">


        <EditText
            android:id="@+id/fishing_rai_size_editText"
            android:layout_weight="1"
            android:text="600"
            android:layout_marginRight="5dp"
            style="@style/RCMOInputText"
            />

        <EditText
            android:id="@+id/fishing_ngan_size_editText"
            android:layout_weight="1"
            android:text="ระบบุจำนวน"
            android:layout_marginLeft="5dp"
            style="@style/RCMOInputText.GrayFont"/>



    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">


        <EditText
            android:id="@+id/fishing_squarewah_size_editText"
            android:layout_weight="1"
            android:text="ระบบุจำนวน"
            android:layout_marginRight="5dp"
            style="@style/RCMOInputText.GrayFont"
            />

        <EditText
            android:id="@+id/fishing_squaremeter_size_editText"
            android:layout_weight="1"
            android:text="ระบบุจำนวน"
            android:layout_marginLeft="5dp"
            style="@style/RCMOInputText.GrayFont"/>



    </LinearLayout>


    <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/RCMODetailFont.Gray"
                android:text="@string/province"
                android:id="@+id/fishing_province_label"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:id="@+id/fishing_province_spinner"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textDirection="firstStrong"
                android:background="@drawable/grey_text_view"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/RCMODetailFont.Gray"
                        android:text="@string/amphor"
                        android:id="@+id/fishing_aumphor_label"
                        android:layout_marginTop="10dp" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:id="@+id/fishing_aumpor_spinner"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/grey_text_view" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="5sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/RCMODetailFont.Gray"
                        android:text="@string/tumbon"
                        android:id="@+id/fishing_tumbon_label"
                        android:layout_marginTop="10sp" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="38sp"
                        android:id="@+id/fishing_tumbon_spriner"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/grey_text_view" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
